Using fxLayout instead of mat-grid-list for formatting

--- a/public/slunch-web/src/app/header-plain/header-plain.component.html
+++ b/public/slunch-web/src/app/header-plain/header-plain.component.html
@@ -1,5 +1,5 @@
-<mat-grid-list style="width:100%; background-color:#d81e05" cols=20>
-  <mat-grid-tile colspan=4>
+<div fxLayout="row" fxLayoutAlign="start center" style="width:100%; background-color:#d81e05">
+  <div fxFlexOffset="1" fxFlex="69">
     <strong style="color: white; position: relative; font-size:55px">Slunch</strong>
-  </mat-grid-tile>
-</mat-grid-list>
+  </div>
+</div>
