--- a/public/slunch-web/src/app/poll/poll.component.html
+++ b/public/slunch-web/src/app/poll/poll.component.html
@@ -1,9 +1,9 @@
 
 <mat-card style="margin:3em">
-  <mat-card-title>{{poll.topic}} Poll</mat-card-title>
+  <mat-card-title>{{pollService.latestPoll?.topic}} Poll</mat-card-title>
   <mat-card-content>
     <mat-grid-list cols="2" rowHeight="2:1">
-      <mat-grid-tile class="clickable" style="border-style: solid; border-width: 1px;"  *ngFor="let option of pollService.latestPoll?.options" (click)="updateVote(option)">
+      <mat-grid-tile class="clickable" style="border-style: solid; border-width: 1px;" *ngFor="let option of pollService.latestPoll?.options" (click)="updateVote(option)">
         <app-poll-option style="width: 100%" [pollOption]="option"></app-poll-option>
       </mat-grid-tile>
     </mat-grid-list>
