--- a/public/slunch-web/src/app/header/header.component.html
+++ b/public/slunch-web/src/app/header/header.component.html
@@ -1,22 +1,20 @@
 <div fxLayout="row" fxLayoutAlign="start center" style="width:100%; background-color:#d81e05">
-  <div fxFlexOffset="1" fxFlex="69">
+  <div fxFlexOffset="0.7%" fxFlex="69%">
     <strong style="color: white; position: relative; font-size:55px">Slunch</strong>
   </div>
-  <div fxLayout="row" fxLayoutAlign=" center" fxFlex="30">
-    <div fxFlex="70">
-      <strong style="color: white; position: relative; font-size:20px">
-        {{authService.getUsername()}}: {{authService.account?.balance | currency}}
-      </strong>
-    </div>
-    <div fxFlex="10">
-      <mat-icon class="clickable" style="color: white; font-size:200%" (click)="logout()" matTooltip="Sign Out">exit_to_app</mat-icon>
-    </div>
+  <div fxFlex="25%">
+    <strong style="color: white; position: relative; font-size:20px">
+      {{authService.getUsername()}}: {{authService.account?.balance | currency}}
+    </strong>
+  </div>
+  <div fxFlex="2%">
+    <mat-icon class="clickable" style="color: white; font-size:200%" (click)="logout()" matTooltip="Sign Out">exit_to_app</mat-icon>
   </div>
 
 </div>
 
 <nav mat-tab-nav-bar>
-  <div fxLayout="row" fxLayout.lt-sm="column">
+  <div fxLayout="row wrap">
     <div>
       <a mat-tab-link (click)="router.navigate(['vote'])">Vote/Order</a>
     </div>
