--- a/public/slunch-web/src/app/order/order.component.html
+++ b/public/slunch-web/src/app/order/order.component.html
@@ -1,21 +1,23 @@
-
-
 <mat-card *ngIf="pollService.getAdminSelectedOptions().length > 0" style="margin:3em">
   <mat-card-title>Ordering</mat-card-title>
   <mat-card-content>
     <mat-vertical-stepper #stepper>
 
       <mat-step label="Choose your restaurant">
-        <div fxLayout="row" fxLayoutAlign=" center" fxLayout.lt-sm="column" fxLayoutAlign.lt-sm=" start" fxLayoutGap="20px">
-          <div *ngFor="let option of pollService.getAdminSelectedOptions()">
+
+        <div fxLayout="row wrap" fxLayoutAlign=" center">
+          <div style="margin:20px" *ngFor="let option of pollService.getAdminSelectedOptions()">
             <img style="max-width: 150px" class="clickable" src="{{option.iconUrl}}" (click)="clickRestaurant(option, stepper)">
           </div>
         </div>
+
       </mat-step>
 
       <mat-step label="Specify order">
-        <div fxLayout="column" fxLayoutAlign="center start" fxLayoutGap="30px" *ngIf="isRestaurantChosen">
-          <div>
+
+        <div fxLayout="row wrap" fxLayoutAlign=" center">
+
+          <div style="margin:30px">
             <a href="{{chosenOption?.menuUrl}}" target="_blank">
               <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign=" center">
                 <div>
@@ -27,7 +29,8 @@
               </div>
             </a>
           </div>
-          <div>
+
+          <div style="margin:30px">
             <mat-form-field>
               <textarea matInput placeholder="Order:" [(ngModel)]="order" required [matAutocomplete]="auto"></textarea>
               <mat-autocomplete #auto="matAutocomplete">
@@ -39,18 +42,24 @@
               </mat-autocomplete>
             </mat-form-field>
           </div>
-          <div>
+
+          <div style="margin:30px">
             <button mat-raised-button [disabled]="order.length <= 0" color="warn" (click)="clickSendOrder(stepper)">
               Send
             </button>
           </div>
+
+
         </div>
+
+
       </mat-step>
 
       <mat-step label="Finish">
         <div *ngIf="isOrderSent" fxLayout="column" fxLayoutGap="10px">
           <div>
-            <strong>{{order}}</strong> from <strong>{{chosenOption?.name}}</strong> was sent!
+            <strong>{{order}}</strong> from
+            <strong>{{chosenOption?.name}}</strong> was sent!
           </div>
           <div>
             <button (click)="router.navigate(['account'])" mat-raised-button color="warn">
@@ -64,4 +73,3 @@
   </mat-card-content>
 
 </mat-card>
-
