--- a/public/slunch-web/src/app/poll-option/poll-option.component.html
+++ b/public/slunch-web/src/app/poll-option/poll-option.component.html
@@ -1,31 +1,42 @@
 
-  
-  
-<mat-grid-list cols=8>
-  <mat-grid-tile colspan=7></mat-grid-tile>
-  <mat-grid-tile colspan=1>
-    <h2 style="position: absolute; top:10px; right:2em">
-      <mat-icon [color]="myvote() ? 'primary' : ''">thumb_up</mat-icon>
-      <span style="position: absolute; top:0; left:30px">{{pollOption.votes.length}}</span>
-    </h2>
-  </mat-grid-tile>
-</mat-grid-list>
 
-<mat-grid-list cols=3>
-  <mat-grid-tile colspan=1></mat-grid-tile>
-  <mat-grid-tile>
-    <img style="max-height: 100%; max-width: 100%" src="{{pollOption.iconUrl}}">
-  </mat-grid-tile>
-</mat-grid-list>
 
-<mat-grid-list cols=8>
-  <mat-grid-tile>
-    <h2 style="position: absolute; top:0; left: 1em">
-      <mat-icon color="primary" matTooltip="{{pollOption.votes.join(', ')}}" matTooltipPosition="after">group</mat-icon>
-    </h2>
-  </mat-grid-tile>
-</mat-grid-list>
+
+<mat-card>
+
+  <div fxLayout="row">
+    <div fxFlex="50px"></div>
+    <div fxFlex="200px"></div>
+    <div fxFlex="50px">
+      <h2>
+        <mat-icon [color]="myvote() ? 'primary' : ''">thumb_up</mat-icon>
+        <span>{{pollOption.votes.length}}</span>
+      </h2>
+    </div>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="center center">
+    <div fxFlex="50px"></div>
+    <div fxFlex="200px">
+      <div style="height: 180px; width: 180px">
+        <img style="max-height: 100%; max-width: 100%" src="{{pollOption.iconUrl}}">
+      </div>
+    </div>
+    <div fxFlex="50px"></div>
+  </div>
+
+  <div fxLayout="row">
+    <div fxFlex="50px">
+      <mat-icon color="primary" matTooltip="{{pollOption.votes.join(', ')}}" matTooltipPosition="after">
+        group
+      </mat-icon>
+    </div>
+    <div fxFlex="200px"></div>
+    <div fxFlex="50px"></div>
+  </div>
   
+</mat-card>
+
 
 
 
