--- a/public/slunch-web/src/app/poll/poll.component.html
+++ b/public/slunch-web/src/app/poll/poll.component.html
@@ -2,10 +2,12 @@
 <mat-card style="margin:3em">
   <mat-card-title>{{pollService.latestPoll?.topic}} Poll</mat-card-title>
   <mat-card-content>
-    <mat-grid-list cols="2" rowHeight="2:1">
-      <mat-grid-tile class="clickable" style="border-style: solid; border-width: 1px;" *ngFor="let option of pollService.latestPoll?.options" (click)="updateVote(option)">
-        <app-poll-option style="width: 100%" [pollOption]="option"></app-poll-option>
-      </mat-grid-tile>
-    </mat-grid-list>
+
+    <div fxLayout="row wrap">
+      <div style="margin:10px" *ngFor="let option of pollService.latestPoll?.options">
+        <app-poll-option class="clickable" (click)="updateVote(option)" [pollOption]="option"></app-poll-option>
+      </div>
+    </div>
+
   </mat-card-content>
 </mat-card>
